# haskell-in-depth

chapter1/: chapter1.cabal  default.nix
chapter1/app/: Main.hs
chapter1/src/: Chapter1.hs
chapter1/test/: Main.hs
chapter2/: Session.vim  chapter2.cabal  default.nix  dirs.txt  turns.txt
chapter2/app/: Main.hs
chapter2/src/: Chapter2.hs
chapter2/test/: Main.hs
chapter2b/: README.md  chapter2b.cabal  default.nix
chapter2b/app/: Main.hs
chapter2b/src/: Chapter2b.hs
chapter2b/test/: Main.hs
chapter3/: chapter3.cabal  shell.nix
chapter3/app/: Main.hs  StatReport.hs
chapter3/src/: Chapter3.hs
stockquotes/: stockquotes.cabal
stockquotes/app/: Main.hs
stockquotes/src/: Stockquotes.hs
