cabal-version:       3.0

name:                chapter1
synopsis:            Project synopsis
version:             0.0.1.0
homepage:            https://github.com/your_github_username/chapter1
license:             BSD-3-Clause
author:              Your Name
maintainer:          Your Name
copyright:           Your Name
category:            Package.Category
build-type:          Simple

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Chapter1
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >= 4.11 && < 5,
                       text,
                       fmt

executable chapter1
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  build-depends:      base
                    , chapter1
                    , text
                    , fmt

test-suite chapter1-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.11 && < 5
                  , chapter1
                  , hedgehog
