name:                chapter2
synopsis:            Project synopsis
version:             0.0.1.0
homepage:            https://github.com/your_github_username/chapter2
license:             BSD3
author:              michel
maintainer:          michel
copyright:           michel
category:            Package.Category
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Chapter2
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >= 4.11 && < 5
                       , text
                       , fmt
                       , random >= 1.2
                       , mtl

executable chapter2
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  build-depends:      base
                    , chapter2
                    , text
                    , fmt
                    , random >= 1.2
                    , mtl

test-suite chapter2-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.11 && < 5
                  , chapter2
                  , hedgehog
