cabal-version:       3.0

name:                stockquotes
synopsis:            Project synopsis
version:             0.0.1.0
homepage:            https://github.com/your_github_username/stockquotes
license:             BSD-3-Clause
author:              Your Name
maintainer:          Your Name
copyright:           Your Name
category:            Package.Category
build-type:          Simple

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Stockquotes
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >= 4.11 && < 5

executable stockquotes
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  build-depends:      stockquotes
                    , Chart >=1.8 && <1.10
                    , Chart-diagrams >=1.8 && <1.10
                    , diagrams-core >=1.3 && <1.5
                    , base
                    , blaze-colonnade >=1.1 && <1.3
                    , blaze-html >=0.9 && <0.10
                    , bytestring >=0.10 && <0.12
                    , cassava >=0.5 && <0.6
                    , colonnade >=1.1 && <1.3
                    , fmt >=0.5 && <0.7
                    , optparse-applicative >=0.14 && <0.17
                    , text >=1.2 && <1.3
                    , time >=1.8 && <1.12
